# Face-Recognition-with-PCA

./: readme.md
src/: Makefile.am  Makefile.in  My_Matrix.cpp  My_Matrix.h  Process.cpp  Process.h  Readme.md  config.h.in  configure  configure.ac  cscope.out  face_recognition.cpp
src/autom4te.cache/: output.0  requests  traces.0  traces.1
